[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 46.4.0',
]

[tool.black]
line-length = 79
# We need a later version of black for 312-314
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-ra -v --color=yes"
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
# Per-test timeout in seconds
timeout = 180

[tool.mypy]

# For details on each flag, please see the mypy documentation at:
# https://mypy.readthedocs.io/en/stable/config_file.html#config-file

# Note: The order of flags listed here should match the order used in mypy's
# documentation to make it easier to find the documentation for each flag.

# Import Discovery
ignore_missing_imports = false

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
# FIXME disallow_any_decorated is disabled because it produces an error for almost
# every decorated function (at least in python3.8)
disallow_any_decorated = false
# FIXME disallow_any_explicit is disabled because it produces a lot of errors
# which are currently hard to fix, and we want to avoid code changes as much as possible.
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling
implicit_optional = false
strict_optional = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
# FIXME Disabled for now as we need to fix the X509 import.
#enable_error_code = ["deprecated"]
local_partial_types = true
implicit_reexport = false
strict_concatenate = true
strict_equality = true
strict = true

# Configuring error messages
show_error_context = true
show_column_numbers = true
hide_error_codes = false
pretty = true
color_output = true
error_summary = true
show_absolute_path = false

# Miscellaneous
warn_unused_configs = true
verbosity = 0

# This is a temporary workaround for the fact that mypy can
# produce different errors in 3.8 and 3.14, and I want to avoid code changes
# as much as possible.
disable_error_code = [ 'unused-ignore' ]

[[tool.mypy.overrides]]
    module = ["eventlet.*"]
    follow_untyped_imports = true

[[tool.mypy.overrides]]
    module = ["gevent.thread"]
    follow_untyped_imports = true

[[tool.mypy.overrides]]
    module = ["puresasl.*"]
    follow_untyped_imports = true
