[metadata]
name = kazoo
version = attr: kazoo.version.__version__
author = Kazoo team
author_email = python-zk@googlegroups.com
url = https://kazoo.readthedocs.io
description = "Higher Level Zookeeper Client"
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
license = Apache 2.0
license_files =
    LICENSE
platform = any
keywords = zookeeper, lock, leader, configuration
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
project_urls =
    Documentation = https://kazoo.readthedocs.io
    Changelog = https://github.com/python-zk/kazoo/releases
    Source = https://github.com/python-zk/kazoo
    Bug Tracker = https://github.com/python-zk/kazoo/issues


[options]
zip_safe = false
include_package_data = true
packages = find:

[aliases]
release = sdist bdist_wheel

[egg_info]
tag_build = dev

[bdist_wheel]
universal = true

[options.extras_require]
dev =
    flake8

test =
    objgraph
    pytest
    pytest-cov
    pytest-timeout
    gevent>=1.2 ; implementation_name!='pypy'
    eventlet>=0.17.1 ; implementation_name!='pypy'
    pyjks
    pyopenssl

eventlet =
    eventlet>=0.17.1

gevent =
    gevent>=1.2

sasl =
    pure_sasl>=0.5.1

docs =
    Sphinx>=1.2.2
    sphinx-autodoc-typehints>=1

typing =
    mypy>=0.991

alldeps =
    %(dev)s
    %(eventlet)s
    %(gevent)s
    %(sasl)s
    %(docs)s
    %(typing)s

